<resources>
    <string name="app_name">Viathan App</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="customers">Customers</string>
    <string name="_33">33</string>
    <string name="days">Days</string>
    <string name="_120">120</string>
    <string name="_96">96</string>
    <string name="view_chart">View Chart</string>
    <string name="energy_usage">Energy Usage</string>

    <string name="uptime">Uptime</string>
    <string name="kwh">KWh</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_statistics_screen">StatisticsScreen</string>
    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">Week</string>
    <string name="tab_text_3">Month</string>
    <string name="landmark_centre">Landmark Centre</string>
</resources>