<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".Dashboard">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/menu_bar"
      android:src="@drawable/menubar"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_margin="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/notification"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_margin="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/notification_icon"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:fontFamily="@font/open_sans_regular"
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/menu_bar"
      android:text="@string/dashboard"
      android:textSize="40sp"
      android:layout_marginStart="60dp"
      android:layout_marginLeft="40dp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintTop_toBottomOf="@id/text"
      app:layout_constraintStart_toStartOf="parent"
      android:background="#F4F4F4"
      android:orientation="vertical"
      android:layout_marginTop="130dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/energy_usage"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="16dp"
          android:layout_marginStart="30dp"
          android:textSize="16sp"
          android:layout_marginLeft="30dp" />

      <RelativeLayout
          android:id="@+id/parentView1"
          android:layout_width="match_parent"
          android:layout_height="66dp"
          android:background="@drawable/energy_usage_bg"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/text1"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp"
          android:layout_marginTop="10dp"
          android:padding="4dp"
          >

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/bgColor"
            android:id="@+id/energy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_96"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text2"
            android:layout_width="36dp"
            android:layout_height="18dp"
            android:layout_alignLeft="@id/energy_value"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="14dp"
            android:text="@string/kwh"
            android:textColor="@color/bgColor"
            android:textSize="24sp"
            android:layout_alignStart="@id/energy_value" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_bt"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/view_bg"
            android:text="@string/view_chart"
            android:textSize="8sp"
            android:layout_alignParentRight="true"
            android:textColor="#0F4D92"
            android:textAllCaps="false"
            android:drawableRight="@drawable/view_bt"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            tools:ignore="SmallSp"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/view_bt"
            android:layout_marginEnd="20dp" />
      </RelativeLayout>

      <TextView
          android:id="@+id/text3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/uptime"
          app:layout_constraintTop_toBottomOf="@id/parentView1"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="4dp"
          android:layout_marginStart="30dp"
          android:textSize="16sp"
          android:layout_marginLeft="30dp" />

      <RelativeLayout
          android:id="@+id/parentView2"
          android:layout_width="match_parent"
          android:layout_height="66dp"
          android:background="@drawable/uptime_bg"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/text3"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp"
          android:layout_marginTop="6dp"
          android:padding="4dp"
          >

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/bgColor"
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_120"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/bgColor"
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:layout_marginStart="60dp"
            android:layout_alignLeft="@id/time_value"
            android:layout_marginTop="14dp"
            android:textSize="24sp"
            android:layout_marginLeft="60dp"
            android:layout_alignStart="@id/time_value" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_time_bt"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/view_bg"
            android:text="@string/view_chart"
            android:textSize="8sp"
            android:layout_alignParentRight="true"
            android:textColor="#0F4D92"
            android:textAllCaps="false"
            android:drawableRight="@drawable/view_bt"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/view_bt"
            android:layout_alignParentEnd="true"
            tools:ignore="SmallSp" />
      </RelativeLayout>

      <androidx.cardview.widget.CardView
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/parentView2"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:layout_margin="30dp"
          app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
          <ProgressBar
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/pipp_progress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:max="100"
              android:progress="90"
              android:background="@drawable/custom_progress"
              android:padding="10dp"
              android:layout_margin="20dp"
              />

          <ProgressBar
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/pipp_progress"
              android:id="@+id/ipl_progress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:max="100"
              android:progress="50"
              android:background="@drawable/custom_progress"
              android:padding="10dp"
              android:layout_margin="20dp"
              />

          <ProgressBar
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/ipl_progress"
              android:id="@+id/ilupeju_progress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:max="100"
              android:progress="70"
              android:background="@drawable/custom_progress"
              android:padding="10dp"
              android:layout_margin="20dp"
              />

          <ProgressBar
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/ilupeju_progress"
              android:id="@+id/lisabi_progress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:max="100"
              android:progress="30"
              android:background="@drawable/custom_progress"
              android:padding="10dp"
              android:layout_margin="20dp"
              />

        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="80dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp"
          android:layout_marginBottom="10dp"
          app:cardCornerRadius="20dp"
          >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/energy_value2"
              android:layout_width="19dp"
              android:layout_height="22dp"
              android:layout_marginStart="44dp"
              android:layout_marginLeft="44dp"
              android:layout_marginTop="10dp"
              android:text="@string/_96"
              android:textColor="#000000"
              android:textSize="22sp"
              app:layout_constraintEnd_toStartOf="@id/view1"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/text5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="KWh"
              android:textColor="#002147"
              android:textSize="16sp"
              app:layout_constraintEnd_toStartOf="@id/view1"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/energy_value2" />

          <view
              android:id="@+id/view1"
              android:layout_width="2dp"
              android:layout_height="50dp"
              android:layout_marginStart="46dp"
              android:layout_marginLeft="46dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:background="#C4C4C4"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toEndOf="@id/energy_value2"
              app:layout_constraintTop_toTopOf="parent" />

          <androidx.appcompat.widget.AppCompatTextView
              android:textColor="#000000"
              android:id="@+id/time_val"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/_120"
              android:layout_marginTop="16dp"
              app:layout_constraintEnd_toStartOf="@id/view2"
              app:layout_constraintStart_toEndOf="@id/view1"
              app:layout_constraintTop_toTopOf="parent"

              android:textSize="22sp"
              android:layout_marginLeft="40dp"
              android:layout_marginStart="40dp" />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/text6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/days"
              android:textColor="#002147"
              android:textSize="16sp"
              app:layout_constraintEnd_toStartOf="@id/view2"
              app:layout_constraintStart_toEndOf="@id/view1"
              app:layout_constraintTop_toBottomOf="@id/energy_value2" />

          <view
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:background="#C4C4C4"
              android:id="@+id/view2"

              app:layout_constraintStart_toEndOf="@id/time_val"
              android:layout_width="2dp"
              android:layout_height="50dp"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginStart="34dp"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginLeft="34dp" />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/cus_val"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:text="@string/_33"
              android:textColor="#000000"
              android:textSize="22sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@id/view2"

              app:layout_constraintTop_toTopOf="parent" />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/text7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/customers"
              android:textColor="#002147"
              android:textSize="14sp"
              app:layout_constraintStart_toEndOf="@id/view2"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/energy_value2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


  </LinearLayout>



  </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>